<?xml version="1.0" encoding="utf-8"?>
<!-- 热门板块 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/z_bgcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/z_title_height"
        android:background="@color/titlecolor"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/hottitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/rmb"
            android:textColor="@color/White"
            android:textSize="@dimen/z_title_size" />

        <ImageView
            android:id="@+id/title_search"
            android:layout_width="@dimen/z_icon_size"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/search"
            android:src="@drawable/search" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="1dp"
        android:background="@color/z_colorblock"
        android:gravity="center" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zfname"
            android:textColor="@color/z_list_title"
            android:textSize="@dimen/z_list_title_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zfb"
            android:textColor="@color/z_list_title"
            android:textSize="@dimen/z_list_title_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ze"
            android:textColor="@color/z_list_title"
            android:textSize="@dimen/z_list_title_size" />
    </LinearLayout>

    <ListView
        android:id="@+id/hotlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/z_colorblock"
        android:cacheColorHint="#00000000"
        android:divider="#01152e"
        android:dividerHeight="1dp"
        android:listSelector="#00000000"
        android:scrollbars="none" />

</LinearLayout>