<?xml version="1.0" encoding="utf-8"?>
<!-- 涨幅榜/跌幅榜 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/z_bgcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/z_title_height"
        android:background="@color/titlecolor"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/zfb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/White"
            android:textSize="@dimen/z_title_size" />

        <ImageView
            android:id="@+id/zfb_searchid"
            android:layout_width="@dimen/z_icon_size"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/backdescripse"
            android:src="@drawable/search" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/z_colorblock"
        android:orientation="horizontal"
        android:padding="6dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zfname"
            android:textColor="@color/z_list_title"
            android:textSize="@dimen/z_list_title_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zfzx"
            android:textColor="@color/z_list_title"
            android:textSize="@dimen/z_list_title_size" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zfzd"
            android:textColor="@color/z_list_title"
            android:textSize="@dimen/z_list_title_size" />

        <TextView
            android:id="@+id/zs_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zfzf"
            android:textColor="@color/z_list_title"
            android:textSize="@dimen/z_list_title_size" />
    </LinearLayout>

    <include layout="@layout/pullable_listview" />

</LinearLayout>