<?xml version="1.0" encoding="utf-8"?>
<!-- 2．	沪深行情 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/z_bgcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/z_title_height"
        android:background="#01152e"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/hshqtitle"
            android:textColor="@color/White"
            android:textSize="@dimen/z_title_size" />

        <ImageView
            android:id="@+id/title_search"
            android:layout_width="@dimen/z_icon_size"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/search"
            android:src="@drawable/search" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_hot"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="@color/z_colorblock"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/hottitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/hotpaneltitle"
            android:textColor="@color/White"
            android:textSize="@dimen/z_sub_title_size" />

        <ImageView
            android:id="@+id/hot_title_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/clickstr"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <GridView
        android:id="@+id/hotlayoutid"
        android:layout_width="fill_parent"
        android:layout_height="170dip"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:visibility="gone" >
    </GridView>

    <RelativeLayout
        android:id="@+id/layout_increase"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/z_colorblock"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/uppanel"
            android:textColor="@color/White"
            android:textSize="@dimen/z_sub_title_size" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:contentDescription="@string/search"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#01152e"
            android:dividerHeight="1dp"
            android:scrollbars="none" />
    </LinearLayout>

</LinearLayout>