<?xml version="1.0" encoding="utf-8"?>
<!-- 个股搜索 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/z_bgcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/z_title_height"
        android:background="@color/titlecolor"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ss_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/ssuo"
            android:textColor="@color/White"
            android:textSize="@dimen/z_title_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bg_000000_r5"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/ss_et_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:gravity="center_vertical"
            android:hint="@string/hitkp"
            android:imeOptions="actionSearch"
            android:paddingLeft="35dp"
            android:paddingRight="45dp"
            android:singleLine="true"
            android:textColor="@color/White"
            android:textColorHint="#3d4c5f"
            android:textSize="14dp" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/ss_searchbutton"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/search_img" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:rotation="45"
            android:src="@drawable/search_add"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="#808a96" />

    <ListView
        android:id="@+id/sslist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
        android:dividerHeight="0dp"
        android:scrollbars="none" />

</LinearLayout>